question 4 part 1 finished

--- a/HW1/HW1Solution.qmd
+++ b/HW1/HW1Solution.qmd
@@ -200,8 +200,11 @@ awk -F , ' NR > 1 { print $12 } ' | sort | uniq -c
 1. You and your friend just have finished reading *Pride and Prejudice* by Jane Austen. Among the four main characters in the book, Elizabeth, Jane, Lydia, and Darcy, your friend thinks that Darcy was the most mentioned. You, however, are certain it was Elizabeth. Obtain the full text of the novel from <http://www.gutenberg.org/cache/epub/42671/pg42671.txt> and save to your local folder. 
 ```{bash}
 #| eval: false
-wget -nc http://www.gutenberg.org/cache/epub/42671/pg42671.txt
+curl -L -O  http://www.gutenberg.org/cache/epub/42671/pg42671.txt
 ```
+
+**Done**
+
 Explain what `wget -nc` does. Do **not** put this text file `pg42671.txt` in Git. Complete the following loop to tabulate the number of times each of the four characters is mentioned using Linux commands.
 ```{bash}
 #| eval: false
