changes on question 4.

--- a/HW1/HW1Solution.qmd
+++ b/HW1/HW1Solution.qmd
@@ -102,7 +102,7 @@ ls -l ~/mimic/icu
 
 4. What's the output of the following bash script?
 ```{bash}
-#| eval: false
+#| eval: True
 for datafile in ~/mimic/core/*.gz
 do
   ls -l $datafile
@@ -133,7 +133,7 @@ gzcat ~/mimic/core/admissions.csv.gz | head -10
 
 **How many rows are in this data file?**
 
-*-Show the first lines of the data*
+**-Show the first lines of the data**
 ```{bash}
 gzcat ~/mimic/core/admissions.csv.gz | head -3
 ```
@@ -256,18 +256,22 @@ head -n "$2" "$1" | tail -n "$3"
 
 Using `chmod` to make the file executable by the owner, and run
 ```{bash}
-#| eval: false
+#| eval: True
 chmod 700 ./middle.sh
 ./middle.sh pg42671.txt 20 5
 ```
 Explain the output. Explain the meaning of `"$1"`, `"$2"`, and `"$3"` in this shell script. Why do we need the first line of the shell script?
 
 **Explain the output.**
+
 **Solution** The out put means the last 5 rows of the first 20 rows 
 (15-20 rows) of the pg42671.txt file.
-In the string: pg42671.txt 20 5, $1 is the pg42671.txt, $2 is 20, and $3 is 5.
+In the string: "pg42671.txt 20 5", 
+$1 is the pg42671.txt. 
+$2 is 20, and $3 is 5.
 
-**Explain the output.**
+**Why do we need the first line of the shell script?**
+
 **Solution** The first line is used to identify the shell to execute.
 
 ## Q5. More fun with Linux
