--- a/HW2/HW2Solution.qmd
+++ b/HW2/HW2Solution.qmd
@@ -18,14 +18,19 @@ knitr:
     fig.width: 6
     fig.height: 4
     message: FALSE
+editor: 
+  markdown: 
+    wrap: 72
 ---
 
 Display machine information for reproducibility:
+
 ```{r}
 sessionInfo()
 ```
 
 Load necessary libraries (you can add more as needed).
+
 ```{r setup}
 library(data.table)
 library(lubridate)
@@ -34,13 +39,18 @@ library(tidyverse)
 ```
 
 MIMIC data location
+
 ```{r}
 mimic_path <- "~/mimic"
 ```
 
-In this exercise, we use tidyverse (ggplot2, dplyr, etc) to explore the [MIMIC-IV](https://mimic.mit.edu/docs/iv/) data introduced in [homework 1](https://ucla-biostat-203b.github.io/2023winter/hw/hw1/hw1.html) and to build a cohort of ICU stays.
+In this exercise, we use tidyverse (ggplot2, dplyr, etc) to explore the
+[MIMIC-IV](https://mimic.mit.edu/docs/iv/) data introduced in [homework
+1](https://ucla-biostat-203b.github.io/2023winter/hw/hw1/hw1.html) and
+to build a cohort of ICU stays.
 
-Display the contents of MIMIC data folder. 
+Display the contents of MIMIC data folder.
+
 ```{r}
 system(str_c("ls -l ", mimic_path, "/"), intern = TRUE)
 system(str_c("ls -l ", mimic_path, "/core"), intern = TRUE)
@@ -50,7 +60,10 @@ system(str_c("ls -l ", mimic_path, "/icu"), intern = TRUE)
 
 ## Q1. `read.csv` (base R) vs `read_csv` (tidyverse) vs `fread` (data.table)
 
-There are quite a few utilities in R for reading plain text data files. Let us test the speed of reading a moderate sized compressed csv file, `admissions.csv.gz`, by three programs: `read.csv` in base R, `read_csv` in tidyverse, and `fread` in the popular data.table package. 
+There are quite a few utilities in R for reading plain text data files.
+Let us test the speed of reading a moderate sized compressed csv file,
+`admissions.csv.gz`, by three programs: `read.csv` in base R, `read_csv`
+in tidyverse, and `fread` in the popular data.table package.
 
 ```{r}
 system.time(rbase <- read.csv(str_c(mimic_path, "/core/admissions.csv.gz")))
@@ -58,8 +71,9 @@ system.time(rtidy <- read_csv(str_c(mimic_path,"/core/admissions.csv.gz")))
 system.time(rfread <- fread(str_c(mimic_path,"/core/admissions.csv.gz")))
 ```
 
+Which function is fastest? Is there difference in the (default) parsed
+data types? (Hint: R function `system.time` measures run times.)
 
-Which function is fastest? Is there difference in the (default) parsed data types? (Hint: R function `system.time` measures run times.)
 ```{r}
 # thee str() function could check the data type of an entire dataframe.
 str(rbase)
@@ -67,27 +81,28 @@ str(rtidy)
 str(rfread)
 ```
 
-**Q1 Solution:**
-Based on the result, the The fread is the fasest function. The read.csv is the 
-slowest. 
-Based on the result from the 'str' command, we can see some obvious differences
-in the (default) parsed data types? 
-For example: 'read.csv' command read the id number of the first two rows as int, 
-read the time and the qualitative data as chr. 
-The 'read_csv' command read the id number of the first two rows as num, read the 
-time as POSIXct, and read the qualitative data as char. 
-The 'fread' command read the id number of the first two rows as int and read the 
-time as int, and read the qualitative data as chr. 
+**Q1 Solution:** Based on the result, the The fread is the fasest
+function. The read.csv is the slowest. Based on the result from the
+'str' command, we can see some obvious differences in the (default)
+parsed data types. For example: 'read.csv' command read the id number of
+the first two rows as int, read the time and the qualitative data as
+chr. The 'read_csv' command read the id number of the first two rows as
+num, read the time as POSIXct, and read the qualitative data as char.
+The 'fread' command read the id number of the first two rows as int and
+read the time as int, and read the qualitative data as chr.
 
 For later questions, we stick to the `read_csv` in tidyverse.
 
 ## Q2. ICU stays
 
-`icustays.csv.gz` (<https://mimic.mit.edu/docs/iv/modules/icu/icustays/>) contains data about Intensive Care Units (ICU) stays. The first 10 lines are
+`icustays.csv.gz`
+(<https://mimic.mit.edu/docs/iv/modules/icu/icustays/>) contains data
+about Intensive Care Units (ICU) stays. The first 10 lines are
+
 ```{r}
 system(
   str_c(
-    "zcat < ", 
+    "gzcat < ", 
     str_c(mimic_path, "/icu/icustays.csv.gz"), 
     " | head"
     ), 
@@ -95,55 +110,66 @@ system(
 )
 ```
 
-
-1. Import `icustatys.csv.gz` as a tibble `icustays_tble`. 
+1.  Import `icustatys.csv.gz` as a tibble `icustays_tble`.
 
 ```{r}
 icustays_tble<- read_csv(str_c(mimic_path,"/icu/icustays.csv.gz"))
-is.tibble(icustays_tble)
+is_tibble(icustays_tble)
 ```
-**Solution** 
-I used the 'read_csv' command to read the icu file into tibble and used the 'is.tibble' 
-command to check if it is a tibble. 
 
-2. How many unique `subject_id`? Can a `subject_id` have multiple ICU stays? 
+**Solution:** I used the 'read_csv' command to read the icu file into
+tibble and used the 'is.tibble' command to check if it is a tibble.
+
+2.  How many unique `subject_id`? Can a `subject_id` have multiple ICU
+    stays?
 
 ```{r}
-nrow(distinct(icustays_tble,subject_id))
+icustays_tble%>%
+  distinct(subject_id) %>%
+  nrow()
 ```
-**Solution** 
-Yes, based on the result from 'nrow' command above, we have 53150 numebrs of
-'Subject_id'. Since the original data of the 'icustays_tble' have 76540 observations, so a 'subject_id' can have multiple ICU stays.
 
-3. Summarize the number of ICU stays per `subject_id` by graphs. 
+**Solution:** Yes, based on the result from 'nrow' command above, we have
+53150 numebrs of 'Subject_id'. Since the original data of the
+'icustays_tble' have 76540 observations which is a lot more than what we got,
+so a 'subject_id' can havemultiple ICU stays.
+
+3.  Summarize the number of ICU stays per `subject_id` by graphs.
 
 ```{r}
-plot_icu_stay <-icustays_tble %>% 
+plot_icu_stay <- icustays_tble %>% 
   count(subject_id) %>%
-    count(n)
-  
-ggplot(data = plot_icu_stay) + 
-geom_col(mapping= aes(x =n , y = nn))+ xlim(0, 30)
-  
-
+  count(n) 
+plot1 <- ggplot(data = plot_icu_stay) + 
+  geom_col(mapping= aes (x =n, y = nn, fill=nn)) + xlim(0, 40) + 
+  labs(x = "Number of subject ids with specific number of ICU stays", 
+       y = "Number of ICU stays per 'subject id") 
+plot1
 ```
 
-4. For each `subject_id`, let's only keep the first ICU stay in the tibble `icustays_tble`. (Hint: `slice_min` and `slice_max` may take long. Think alternative ways to achieve the same function.)
+I use the bar plot to show the repetitive number of ICU stays in each subject id.
+
+4.  For each `subject_id`, let's only keep the first ICU stay in the
+    tibble `icustays_tble`. (Hint: `slice_min` and `slice_max` may take
+    long. Think alternative ways to achieve the same function.)
 
 ```{r}
 icustays_tble1 <- icustays_tble %>%
   arrange(subject_id, intime) %>%
   distinct(subject_id, .keep_all = TRUE) 
-
 icustays_tble1
 ```
 
-**Solution**
-Sort the data and then distinct so we will only have the first ICU stay in the tibble. 
+**Solution:** Sort the data and then we use the distinct(.keep_all=TRUE) so we will only have the
+first ICU stay in the new tibble. 
 
 ## Q3. `admission` data
 
-Information of the patients admitted into hospital is available in `admissions.csv.gz`. See <https://mimic.mit.edu/docs/iv/modules/hosp/admissions/> for details of each field in this file. The first 10 lines are
+Information of the patients admitted into hospital is available in
+`admissions.csv.gz`. See
+<https://mimic.mit.edu/docs/iv/modules/hosp/admissions/> for details of
+each field in this file. The first 10 lines are
+
 ```{r}
 system(
   str_c(
@@ -155,23 +181,27 @@ system(
 )
 ```
 
-1. Import `admissions.csv.gz` as a tibble `admissions_tble`.
+1.  Import `admissions.csv.gz` as a tibble `admissions_tble`.
 
-2. Let's only keep the admissions that have a match in `icustays_tble` according to `subject_id` and `hadmi_id`.
+2.  Let's only keep the admissions that have a match in `icustays_tble`
+    according to `subject_id` and `hadmi_id`.
 
-3. Summarize the following variables by graphics. 
+3.  Summarize the following variables by graphics.
 
-    - admission year  
-    - admission month  
-    - admission month day  
-    - admission week day  
-    - admission hour (anything unusual?)  
-    - admission minute (anything unusual?)  
-    - length of hospital stay (anything unusual?)    
-    
+    -   admission year\
+    -   admission month\
+    -   admission month day\
+    -   admission week day\
+    -   admission hour (anything unusual?)\
+    -   admission minute (anything unusual?)\
+    -   length of hospital stay (anything unusual?)
+
 ## Q4. `patients` data
 
-Patient information is available in `patients.csv.gz`. See <https://mimic.mit.edu/docs/iv/modules/hosp/patients/> for details of each field in this file. The first 10 lines are
+Patient information is available in `patients.csv.gz`. See
+<https://mimic.mit.edu/docs/iv/modules/hosp/patients/> for details of
+each field in this file. The first 10 lines are
+
 ```{r}
 system(
   str_c(
@@ -183,13 +213,20 @@ system(
 )
 ```
 
-1. Import `patients.csv.gz` (<https://mimic.mit.edu/docs/iv/modules/hosp/patients/>) as a tibble `patients_tble` and only keep the patients who have a match in `icustays_tble` (according to `subject_id`).
+1.  Import `patients.csv.gz`
+    (<https://mimic.mit.edu/docs/iv/modules/hosp/patients/>) as a tibble
+    `patients_tble` and only keep the patients who have a match in
+    `icustays_tble` (according to `subject_id`).
 
-2. Summarize variables `gender` and `anchor_age`, and explain any patterns you see.
+2.  Summarize variables `gender` and `anchor_age`, and explain any
+    patterns you see.
 
 ## Q5. Lab results
 
-`labevents.csv.gz` (<https://mimic.mit.edu/docs/iv/modules/hosp/labevents/>) contains all laboratory measurements for patients. The first 10 lines are
+`labevents.csv.gz`
+(<https://mimic.mit.edu/docs/iv/modules/hosp/labevents/>) contains all
+laboratory measurements for patients. The first 10 lines are
+
 ```{r}
 system(
   str_c(
@@ -200,7 +237,9 @@ system(
   intern = TRUE
 )
 ```
-`d_labitems.csv.gz` is the dictionary of lab measurements. 
+
+`d_labitems.csv.gz` is the dictionary of lab measurements.
+
 ```{r}
 system(
   str_c(
@@ -212,19 +251,37 @@ system(
 )
 ```
 
-1. Find how many rows are in `labevents.csv.gz`.
+1.  Find how many rows are in `labevents.csv.gz`.
 
-2. We are interested in the lab measurements of creatinine (50912), potassium (50971), sodium (50983), chloride (50902), bicarbonate (50882), hematocrit (51221), white blood cell count (51301), and glucose (50931). Retrieve a subset of `labevents.csv.gz` only containing these items for the patients in `icustays_tble` as a tibble `labevents_tble`. 
+2.  We are interested in the lab measurements of creatinine (50912),
+    potassium (50971), sodium (50983), chloride (50902), bicarbonate
+    (50882), hematocrit (51221), white blood cell count (51301), and
+    glucose (50931). Retrieve a subset of `labevents.csv.gz` only
+    containing these items for the patients in `icustays_tble` as a
+    tibble `labevents_tble`.
 
-    Hint: `labevents.csv.gz` is a data file too big to be read in by the `read_csv` function in its default setting. Utilize the `col_select` option in the `read_csv` function to reduce the memory burden. It took my computer 5-10 minutes to ingest this file. If your computer really has trouble importing `labevents.csv.gz`, you can import from the reduced data file `labevents_filtered_itemid.csv.gz`.
+    Hint: `labevents.csv.gz` is a data file too big to be read in by the
+    `read_csv` function in its default setting. Utilize the `col_select`
+    option in the `read_csv` function to reduce the memory burden. It
+    took my computer 5-10 minutes to ingest this file. If your computer
+    really has trouble importing `labevents.csv.gz`, you can import from
+    the reduced data file `labevents_filtered_itemid.csv.gz`.
 
-3. Further restrict `labevents_tble` to the first lab measurement during the ICU stay. 
+3.  Further restrict `labevents_tble` to the first lab measurement
+    during the ICU stay.
 
-4. Summarize the lab measurements by appropriate numerics and graphics. 
+4.  Summarize the lab measurements by appropriate numerics and graphics.
 
 ## Q6. Vitals from charted events
 
-`chartevents.csv.gz` (<https://mimic.mit.edu/docs/iv/modules/icu/chartevents/>) contains all the charted data available for a patient. During their ICU stay, the primary repository of a patient’s information is their electronic chart. The `itemid` variable indicates a single measurement type in the database. The `value` variable is the value measured for `itemid`. The first 10 lines of `chartevents.csv.gz` are
+`chartevents.csv.gz`
+(<https://mimic.mit.edu/docs/iv/modules/icu/chartevents/>) contains all
+the charted data available for a patient. During their ICU stay, the
+primary repository of a patient's information is their electronic chart.
+The `itemid` variable indicates a single measurement type in the
+database. The `value` variable is the value measured for `itemid`. The
+first 10 lines of `chartevents.csv.gz` are
+
 ```{r}
 system(
   str_c(
@@ -234,7 +291,10 @@ system(
   intern = TRUE
 )
 ```
-`d_items.csv.gz` (<https://mimic.mit.edu/docs/iv/modules/icu/d_items/>) is the dictionary for the `itemid` in `chartevents.csv.gz`. 
+
+`d_items.csv.gz` (<https://mimic.mit.edu/docs/iv/modules/icu/d_items/>)
+is the dictionary for the `itemid` in `chartevents.csv.gz`.
+
 ```{r}
 system(
   str_c(
@@ -245,33 +305,50 @@ system(
 )
 ```
 
-1. We are interested in the vitals for ICU patients: heart rate (220045), mean non-invasive blood pressure (220181), systolic non-invasive blood pressure (220179), body temperature in Fahrenheit (223761), and respiratory rate (220210). Retrieve a subset of `chartevents.csv.gz` only containing these items for the patients in `icustays_tble` as a tibble `chartevents_tble`.
+1.  We are interested in the vitals for ICU patients: heart rate
+    (220045), mean non-invasive blood pressure (220181), systolic
+    non-invasive blood pressure (220179), body temperature in Fahrenheit
+    (223761), and respiratory rate (220210). Retrieve a subset of
+    `chartevents.csv.gz` only containing these items for the patients in
+    `icustays_tble` as a tibble `chartevents_tble`.
 
-    Hint: `chartevents.csv.gz` is a data file too big to be read in by the `read_csv` function in its default setting. Utilize the `col_select` option in the `read_csv` function to reduce the memory burden. It took my computer >15 minutes to ingest this file. If your computer really has trouble importing `chartevents.csv.gz`, you can import from the reduced data file `chartevents_filtered_itemid.csv.gz`.
+    Hint: `chartevents.csv.gz` is a data file too big to be read in by
+    the `read_csv` function in its default setting. Utilize the
+    `col_select` option in the `read_csv` function to reduce the memory
+    burden. It took my computer \>15 minutes to ingest this file. If
+    your computer really has trouble importing `chartevents.csv.gz`, you
+    can import from the reduced data file
+    `chartevents_filtered_itemid.csv.gz`.
 
-2. Further restrict `chartevents_tble` to the first vital measurement during the ICU stay. 
+2.  Further restrict `chartevents_tble` to the first vital measurement
+    during the ICU stay.
 
-3. Summarize these vital measurements by appropriate numerics and graphics. 
+3.  Summarize these vital measurements by appropriate numerics and
+    graphics.
 
 ## Q7. Putting things together
 
-Let us create a tibble `mimic_icu_cohort` for all ICU stays, where rows are the first ICU stay of each unique adult (age at admission > 18) and columns contain at least following variables  
+Let us create a tibble `mimic_icu_cohort` for all ICU stays, where rows
+are the first ICU stay of each unique adult (age at admission \> 18) and
+columns contain at least following variables
 
-- all variables in `icustays.csv.gz`  
-- all variables in `admission.csv.gz`  
-- all variables in `patients.csv.gz`  
-- first lab measurements during ICU stay  
-- first vital measurements during ICU stay
-- an indicator variable `thirty_day_mort` whether the patient died within 30 days of hospital admission (30 day mortality)
+-   all variables in `icustays.csv.gz`\
+-   all variables in `admission.csv.gz`\
+-   all variables in `patients.csv.gz`\
+-   first lab measurements during ICU stay\
+-   first vital measurements during ICU stay
+-   an indicator variable `thirty_day_mort` whether the patient died
+    within 30 days of hospital admission (30 day mortality)
 
 ## Q8. Exploratory data analysis (EDA)
 
 Summarize following information using appropriate numerics or graphs.
 
-- `thirty_day_mort` vs demographic variables (ethnicity, language, insurance, marital_status, gender, age at hospital admission)
+-   `thirty_day_mort` vs demographic variables (ethnicity, language,
+    insurance, marital_status, gender, age at hospital admission)
 
-- `thirty_day_mort` vs first lab measurements
+-   `thirty_day_mort` vs first lab measurements
 
-- `thirty_day_mort` vs first vital measurements
+-   `thirty_day_mort` vs first vital measurements
 
-- `thirty_day_mort` vs first ICU unit
+-   `thirty_day_mort` vs first ICU unit
